# SecureImageForge

./: .gitconfig  .gitignore  .ruff.toml  ARCHITECTURE_AUDIT_REPORT.md  QUICKSTART.md  README.md  backend_test.py  design_guidelines.json  forge  renovate.json
.emergent/: emergent.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  e2e.yml  release.yml  renovate.yml
backend/: database.py  requirements.txt  server.py
backend/cli/: forge_cli.py
backend/models/: __init__.py  builds.py  common.py  policies.py
backend/routes/: __init__.py  analytics.py  builds.py  config.py  drift.py  exceptions.py  policies.py  registries.py  remediation.py  slsa.py  vex.py  webhooks.py
backend/services/: drift_detector.py  evergreen_pipeline.py  exception_manager.py  health_score.py  image_updater.py  lifecycle_manager.py  opa_engine.py  policy_engine.py  remediation_engine.py  signing_service.py  slsa_attestor.py  version_matrix.py  vex_generator.py  vulnerability_remediation.py  webhook_manager.py
backend/tests/: test_p1_features.py  test_p1_slack_webhook.py  test_phase4_features.py  test_secureimage_forge.py  test_vulnerability_remediation.py  test_webhook_delivery_persistence.py
ci/: README.md
ci/azure-devops/: build.yml
ci/github-actions/: reusable-build.yml
ci/gitlab-ci/: build.gitlab-ci.yml
developer-experience/: README.md
developer-experience/devcontainer/: devcontainer.json
developer-experience/docker-compose/: docker-compose.yml  otel-local.yaml
developer-experience/docs/: QUICKSTART.md
developer-experience/makefiles/: standard.mk
developer-experience/pavedroad-cli/: pyproject.toml
developer-experience/pavedroad-cli/pavedroad/: __init__.py  argocd.py  cli.py  k8s.py
developer-experience/pavedroad-cli/tests/: test_cli.py
docs/: ENTERPRISE_PLATFORM_ARCHITECTURE.md  README.md  dependency-update-strategy.md  platform-secrets.md
docs/agents/: 01-unit-testing-agent.yaml  03-security-scanning-agent.yaml  07-deployment-automation-agent.yaml  09-dependency-management-agent.yaml  10-incident-analysis-agent.yaml  15-supply-chain-agent.yaml  README.md  abbreviated-specs.md  agent-template.yaml
docs/appendix/: glossary.md
docs/compliance/: control-mapping.md
docs/integrations/: README.md
docs/leadership-review/: EXECUTIVE_BRIEFING.md  PHASING_AND_FTE_APPROVAL.md  README.md
docs/phase-1/: README.md
docs/roadmap/: IMPLEMENTATION_ROADMAP.md
docs/runbooks/: 3-action-handover.md
docs/runtime-images/: README.md
forge/: Cargo.toml  deny.toml  rust-toolchain.toml  scratch.rs
forge/crates/forge-api/: Cargo.toml
forge/crates/forge-api/src/: auth.rs  error.rs  lib.rs  metrics.rs  openapi.rs  routes.rs  state.rs  worker.rs
forge/crates/forge-api/tests/: api.rs
forge/crates/forge-cli/: Cargo.toml
forge/crates/forge-cli/src/: main.rs
forge/crates/forge-cli/tests/: cli.rs
forge/crates/forge-core/: Cargo.toml
forge/crates/forge-core/migrations/: 0001_init.sql  0002_artifacts_scans.sql  0003_rbac_and_drift.sql  0004_webhook_deliveries.sql  0005_enterprise_team_mode.sql
forge/crates/forge-core/migrations_postgres/: 0001_init.sql  0002_artifacts_scans.sql  0003_rbac_and_drift.sql  0004_webhook_deliveries.sql  0005_enterprise_team_mode.sql  0006_logs.sql
forge/crates/forge-core/policies/: cis.rego  fedramp_moderate.rego  hipaa.rego  soc2.rego
forge/crates/forge-core/src/: audit.rs  config.rs  dockerfile.rs  domain.rs  drift.rs  error.rs  lib.rs  logs.rs  metrics.rs  orchestrator.rs  pg_storage.rs  process.rs  provenance.rs  rbac.rs  registry.rs  repo.rs  repo.rs.patch  runtime.rs  sarif.rs  storage.rs  team.rs  telemetry.rs  toolchain.rs  tooling.rs  updater.rs  webhooks.rs
forge/crates/forge-core/src/adapters/: buildkit.rs  cosign.rs  grype.rs  mod.rs  opa.rs  syft.rs  trivy.rs
forge/crates/forge-core/tests/: dockerfile_props.rs  orchestrator_e2e.rs
forge/crates/forge-desktop/: Cargo.toml
forge/crates/forge-desktop/assets/: app.css
forge/crates/forge-desktop/packaging/linux/: build-deb.sh  forge-desktop.desktop
forge/crates/forge-desktop/packaging/macos/: AppIcon.icns  Info.plist  entitlements.plist  notarize.sh
forge/crates/forge-desktop/packaging/windows/: forge-desktop.nsi  sign.ps1
forge/crates/forge-desktop/src/: main.rs  state.rs
forge/crates/forge-desktop/src/services/: builds.rs  config_service.rs  mod.rs  orchestration.rs  tray.rs  updates.rs
forge/crates/forge-desktop/src/views/: build_detail.rs  builds_list.rs  dashboard.rs  doctor.rs  mod.rs  new_build.rs  onboarding.rs  settings.rs
forge/crates/forge-sdk/: Cargo.toml
forge/crates/forge-sdk/src/: lib.rs
forge/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE_REGISTER.md  OBSERVABILITY.md  RELEASE.md  TESTING.md
forge/scripts/: build-deb.sh  notarize.sh
forge/xtask/: Cargo.toml
forge/xtask/src/: main.rs
frontend/: .env
frontend/src/: App.css  App.js  index.css
gitops-bootstrap/: push-all.sh
gitops-bootstrap/gitops/: CODEOWNERS  README.md
gitops-bootstrap/platform-repo/: CODEOWNERS  README.md
golden-path/: ADOPTION_WORKFLOW.md  README.md
images/: README.md
images/buildkit/: build.sh
infra/: README.md
memory/: PRD.md
observability/: README.md
reference-service/: Dockerfile  Makefile  README.md  catalog-info.yaml  requirements.txt
scripts/: configure-branch-protection.sh  configure-platform-secrets.sh  placeholders.csv  redline-form.md  redline-placeholders.sh  validate-argocd.sh  validate-cli.sh  validate-e2e.sh  validate-helm.sh
security/: README.md
templates/backstage-scaffolder/rust-axum/skeleton/: Cargo.toml  Dockerfile  Makefile  README.md  catalog-info.yaml
templates/backstage-scaffolder/rust-axum/skeleton/.github/workflows/: build.yml
templates/backstage-scaffolder/rust-axum/skeleton/helm/: Chart.yaml  values.yaml
templates/backstage-scaffolder/rust-axum/skeleton/helm/templates/: all.yaml
templates/backstage-scaffolder/rust-axum/skeleton/src/: main.rs
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json
(+202 files in other folders)
