[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-cli",
    "crates/forge-api",
    "crates/forge-desktop",
    "crates/forge-sdk",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/secureimage/forge"
authors = ["SecureImage Forge Contributors"]

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json", "migrate"] }

# http / api
axum = "0.7"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# cli
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# util
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9"
which = "6"
tempfile = "3"
indoc = "2"
strum = { version = "0.26", features = ["derive"] }
hmac = "0.12"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
async-stream = "0.3"
opentelemetry = { version = "0.27", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-client", "trace"] }
tracing-opentelemetry = { version = "0.28", default-features = false }

# desktop ui
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-desktop = "0.5"

# testing
assert_cmd = "2"
predicates = "3"
mockito = "1"
testcontainers = "0.23"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
