[package]
name = "forge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SecureImage Forge local HTTP API (axum)."

[dependencies]
forge-core = { path = "../forge-core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
