[package]
name = "forge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SecureImage Forge local HTTP API (axum)."

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dependencies]
forge-core = { path = "../forge-core" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
