[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SecureImage Forge command-line interface."

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core", features = ["pg"] }
forge-api = { path = "../forge-api" }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
