[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SecureImage Forge core engine: domain types, build orchestration, scan/sign/SBOM/policy adapters."

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
indoc = { workspace = true }
strum = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = []
# Enable Postgres team-mode storage (see docs/OBSERVABILITY.md).
pg = ["sqlx/postgres"]
# Enable OpenTelemetry OTLP tracing exporter.
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }
